--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
